# dice-visualizer

./: .gitignore  Dice.py  README.md  pyproject.toml
src/dice_visualizer/: __init__.py  plot.py
tests/: test_dice_visualizer.py
